<resources>
    <string name="app_name">BharatAgri</string>
    <string name="title_home">Movies</string>
    <string name="overview">Overview</string>
    <string name="release_status">Status: %s</string>
    <string name="rating">Ratings: %s</string>
    <string name="budget">Budget: $%s</string>
    <string name="revenue">Revenue: $%s</string>
    <string name="genere">Genere: %s</string>
    <string name="sortby">Sort By:</string>
    <string name="rating_sort">Rating</string>
    <string name="popularity_sort">Popularity</string>
    <string name="release_status_sort">Release Date</string>
</resources>